--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,10 @@
     "version": "2.0.0",
     "configurations": [
         {
-            "name": "Debug ANTLR4 Colas grammar",
+            "name": "Debug ANTLR4 Lenguaje grammar",
             "type": "antlr-debug",
             "request": "launch",
-            "input": "input.txt",
+            "input": "input.js",
             "grammar": "MiLenguaje.g4",
             "printParseTree": true,
             "visualParseTree": true
